[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diff13f"
version = "0.1.9" # Version for pip
description = "Dash app to explore 13F filings: top positions, major quarterly changes, and holdings over time."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dash",
    "dash-bootstrap-components",
    "plotly",
    "pyarrow",
    "pandas",
    "polars",
    'xmltodict'
]

[project.scripts]
diff13f = "diff13f.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
diff13f = ["assets/*"]



